Inspect and Duel working

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -19,13 +19,13 @@
     border: 1 px solid rgb(18, 17, 17);
 }
 
-#userName1 {
+#userN1 {
 
     margin-top: 10rem;
     margin-left: -65px;
 }
 
-#userName2 {
+#userN2 {
 
     margin-top: 10rem;
     margin-left: -25px;
